--- a/aula06/aula06.html
+++ b/aula06/aula06.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Aula06 - Estudando GitHub</h1>
     <h1>VAMOS ESTUDAR O GITHUB</h1>
+    <h1>VAMOS ESTUDAR O GITHUB</h1>
 
   </body>
 
