--- a/aula04/aulao4.html
+++ b/aula04/aulao4.html
@@ -9,29 +9,87 @@
   </head>
 
   <body>
-  <div>
-    <h1>grid-template: 50px 1fr / 100px 1fr 100px</h1>
-    <section class="grid grid-template-1">
-      <div class="item">logo</div>
-      <div class="item">nav</div>
-      <div class="item">content</div>
-      <div class="item">sidenav</div>
-      <div class="item">advert</div>
-      <div class="item">footer</div>
-    </section>
-  </div>
-  
-  <div>
-    <h1>grid-template (areas, columns e rows)</h1>
-    <section class="grid grid-template-2">
-      <div class="item logo">logo</div>
-      <div class="item nav">nav</div>
-      <div class="item content">content</div>
-      <div class="item sidenav">sidenav</div>
-      <div class="item advert">advert</div>
-      <div class="item footer">footer</div>
-    </section>
-  </div>
+    <div>
+      <h1>grid-template: 50px 1fr / 100px 1fr 100px</h1>
+      <section class="grid grid-template-areas-1">
+        <div class="item">logo</div>
+        <div class="item">nav</div>
+        <div class="item">content</div>
+        <div class="item">sidenav</div>
+        <div class="item">advert</div>
+        <div class="item">footer</div>
+      </section>
+    </div>
+
+    <div>
+      <h1>grid-template (areas, columns e rows)</h1>
+      <section class="grid grid-template-areas-2">
+        <div class="item logo">logo</div>
+        <div class="item nav">nav</div>
+        <div class="item content">content</div>
+        <div class="item sidenav">sidenav</div>
+        <div class="item advert">advert</div>
+        <div class="item footer">footer</div>
+      </section>
+    </div>
+
+    <div>
+      <h1>grid-template (areas, columns e rows)</h1>
+      <section class="grid grid-template-areas-3">
+        <div class="item logo">logo</div>
+        <div class="item nav">nav</div>
+        <div class="item content">content</div>
+        <div class="item sidenav">sidenav</div>
+        <div class="item advert">advert</div>
+        <div class="item footer">footer</div>
+      </section>
+    </div>
+
+    <div>
+      <h1>grid-template (areas, columns e rows)</h1>
+      <section class="grid grid-template-areas-4">
+        <div class="item logo">logo</div>
+        <div class="item nav">nav</div>
+        <div class="item content">content</div>
+        <div class="item sidenav">sidenav</div>
+        <div class="item advert">advert</div>
+        <div class="item footer">footer</div>
+      </section>
+    </div>
+
+
+    <div>
+      <h1>grid-template-areas-6 (areas, columns e rows)</h1>
+      <section class="grid grid-template-areas-6">
+        <div class="item logo">logo</div>
+        <div class="item nav">nav</div>
+        <div class="item content">content</div>
+        <div class="item sidenav">sidenav</div>
+        <div class="item footer">footer</div>
+      </section>
+    </div>
+
+    <div>
+      <h1>grid-template-7 (areas, columns e rows)</h1>
+      <section class="grid grid-template-areas-7">
+        <div class="item logo">logo</div>
+        <div class="item nav">nav</div>
+        <div class="item content">content</div>
+        <div class="item sidenav">sidenav</div>
+        <div class="item footer">footer</div>
+      </section>
+    </div>
+
+    <div>
+      <h1>grid-template-8 (areas, columns e rows)</h1>
+      <section class="grid grid-template-areas-8">
+        <div class="item logo">logo</div>
+        <div class="item menu">menu</div>
+        <div class="item content">content</div>
+        <div class="item sidebar">sidebar</div>
+        <div class="item footer">footer</div>
+      </section>
+    </div>
   </body>
 
 </html>
