--- a/aula06/aula06.html
+++ b/aula06/aula06.html
@@ -4,14 +4,43 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula06</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>Aula06 - Estudando GitHub</h1>
-    <h1>VAMOS ESTUDAR O GITHUB</h1>
-    <h1>VAMOS ESTUDAR O GITHUB</h1>
+    <h1>justify-content</h1>
 
+    <div>
+      <h1>display: grid; - justify-content-start</h1>
+      <section class="grid justify-content-start">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+      </section>
+    </div>
+
+    <div>
+      <h1>display: grid; - justify-content-end</h1>
+      <section class="grid justify-content-end">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+      </section>
+    </div>
+
+
+    <div>
+      <h1>display: grid; - justify-content-center</h1>
+      <section class="grid justify-content-center">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+      </section>
+    </div>
   </body>
 
 </html>
