--- a/aula07_align_content/aula07.html
+++ b/aula07_align_content/aula07.html
@@ -61,6 +61,16 @@
 
       </section>
     </div>
+
+    <div>
+      <h1>display: grid; - align-content-space-between</h1>
+      <section class="grid space-between">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+
+      </section>
+    </div>
   </body>
 
 </html>
