--- a/aula06_justify_content/aula06.html
+++ b/aula06_justify_content/aula06.html
@@ -41,6 +41,36 @@
         <div class="item">4</div>
       </section>
     </div>
+
+    <div>
+      <h1>display: grid; - justify-content-stretch</h1>
+      <section class="grid stretch">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+      </section>
+    </div>
+
+    <div>
+      <h1>display: grid; - justify-content-space-around</h1>
+      <section class="grid space-around">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+      </section>
+    </div>
+
+    <div>
+      <h1>display: grid; justify-content-space-between</h1>
+      <section class="grid space-between">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+      </section>
+    </div>
   </body>
 
 </html>
