--- a/aula08_exercicio/aula08.html
+++ b/aula08_exercicio/aula08.html
@@ -10,9 +10,14 @@
 
   <body>
     <section class="grid grid-template-1 stretch gap">
-      <div class="item logo"><img class="logoGato" src="./gatos/logo_gato.png" alt="Logo Gato" srcset=""></div>
+      <div class="item logo">
+
+        <img class="logoGato" src="./gatos/logo_gato.png" alt="Logo Gato" srcset="">
+
+      </div>
+
       <div class="item nav">
-        <div class=" menu">
+        <div class="menu">
           <div>Produtos</div>
           <div>Acessórios</div>
           <div>PetShop</div>
@@ -28,15 +33,15 @@
             <label for="">Gato A</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="./gatos/gato1.jpeg" alt="">
+            <img class="gatos" src="./gatos/gato2.jpeg" alt="">
             <label for="">Gato B</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="./gatos/gato1.jpeg" alt="">
+            <img class="gatos" src="./gatos/gato3.jpeg" alt="">
             <label for="">Gato C</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="./gatos/gato1.jpeg" alt="">
+            <img class="gatos" src="./gatos/gato4.jpeg" alt="">
             <label for="">Gato D</label>
           </div>
         </div>
@@ -45,15 +50,15 @@
 
 
           <div class="gallery">
-            <img class="gatos" src="./gatos/gato1.jpeg" alt="">
+            <img class="gatos" src="./gatos/gato3.jpeg" alt="">
             <label for="">Gato A</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="./gatos/gato1.jpeg" alt="">
+            <img class="gatos" src="./gatos/gato4.jpeg" alt="">
             <label for="">Gato B</label>
           </div>
           <div class="gallery">
-            <img class="gatos" src="./gatos/gato1.jpeg" alt="">
+            <img class="gatos" src="./gatos/gato2.jpeg" alt="">
             <label for="">Gato C</label>
           </div>
           <div class="gallery">
@@ -61,6 +66,7 @@
             <label for="">Gato D</label>
           </div>
         </div>
+
       </div>
       <div class="item sidebar">sidebar</div>
       <div class="item footer">footer</div>
